fix on mobile for real this time

--- a/resources/style.css
+++ b/resources/style.css
@@ -167,8 +167,7 @@ body {
     }
 
     .resume-card img {
-        width: auto !important;
-        max-width: 60vw;
+        width: 60vw !important;
     }
 }
 
